--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^12.23.6",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
